# Hedera-agent-Local-AI-Personality-Engine

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  HARNESS.md  LICENSE  README.md  SECURITY.md  build_exe.bat  config.example.yaml  config.yaml  holly_notes.py  pyproject.toml  start.bat  start.vbs  sys_monitor.py  test_api.py  test_api2.py
data/: HEDERA_ARCH.md  MEMORY.md  SOUL.md  model_presets.json
data/harness/: demo_report.html  demo_report.json  demo_report.md  demo_results.json  real_test_report.html  real_test_report.json  real_test_report.md
data/uploads/_common/: batch_rename.py  code_roast.md  holly_terminal.py  markdown_example.md  test.txt  杀死那个石家庄人.mid
data/vocabulary/: common.yaml  farewells.yaml  greetings.yaml  memes.yaml  reactions.yaml  slang.yaml  swagger.yaml
hedera/: __init__.py  __main__.py  cli.py  config.py  default.yaml  desktop.py  docs.py  docs_en_us.py  docs_zh_cn.py  gui.py
hedera/core/: __init__.py  api.py  browser.py  cache.py  code_checker.py  constants.py  context_manager.py  crypto.py  embedding.py  experience.py  init.py  logger.py  meme_learner.py  memory.py  memory_store.py  reflection.py  router.py  sandbox.py  sanitizer.py  sessions.py  tools.py  tools_prompt.py
hedera/harness/: __init__.py  cli.py  evaluator.py  monitor.py  reporter.py  runner.py  sandbox.py
hedera/noise/: __init__.py  injector.py  slider.py
hedera/plugin/: __init__.py  base.py  manager.py
hedera/plugin/builtin/: time.py
hedera/plugin/examples/ping/: main.py  plugin.yaml
hedera/plugin/examples/weather/: main.py  plugin.yaml
hedera/search/: __init__.py  engine.py  registry.py  scrape.py  tavily.py
hedera/server/: __init__.py  http.py
hedera/server/static/: docs.html  index_v2.html  status.html
hedera/training/: __init__.py  signal.py
plugins/aigc_detector/: classifier.pkl  dataset_v3.csv  main.py  plugin.yaml  train.py
plugins/excel/: main.py  plugin.yaml
plugins/midi/: main.py  midi_renderer.py  plugin.yaml
plugins/midi/static/: midi.html
plugins/ppt/: main.py  plugin.yaml
profiles/: 冬青.md  茯苓.md
qq_bot/: NAPCAT_GUIDE.md  README.md  bot.py  pyproject.toml  setup_napcat.ps1  start_all.bat  start_bot.bat  test_connection.py  test_hedera.py
qq_bot/plugins/: hedera_bridge.py
skills/: chovy.yaml  code_review.yaml  explain.yaml  learn_memes.yaml  summarize.yaml  translate.yaml
workspace/data/harness/: demo_report.html  demo_report.json  demo_report.md  demo_results.json
workspace/test_project/: api.py  models.py
workspace/test_project/framework/: __init__.py  app.py  auth.py  config.py  database.py  validation.py
workspace/test_project/tests/: test_framework.py
workspace/test_project/utils/: helpers.py
